--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My resume</title>
-    <link rel="stylesheet" href="./css/animate.css" >
+    <link rel="stylesheet" href="./css/animate.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
@@ -37,22 +40,18 @@
         </section>
 
         <section class="skills">
-          <h2 class="skills-title">
-            Tech skills
-          </h2>
+          <h2 class="skills-title">Tech skills</h2>
           <ul class="skills-list">
-            <li class="skills-item">HTML</li>
-            <li class="skills-item">CSS</li>
-            <li class="skills-item">Git</li>
-            <li class="skills-item">JavaScript</li>
-            <li class="skills-item">React</li>
-            <li class="skills-item">Node.js</li>
+            <li class="skills-item"></li>
+            <li class="skills-item"></li>
+            <li class="skills-item"></li>
+            <li class="skills-item"></li>
+            <li class="skills-item"></li>
+            <li class="skills-item">HTML CSS</li>
           </ul>
         </section>
         <section class="skills">
-          <h2 class="skills-title">
-            Soft skills
-          </h2>
+          <h2 class="skills-title">Soft skills</h2>
           <ul class="skills-list">
             <li class="skills-item">Scrum</li>
             <li class="skills-item">Agile</li>
@@ -64,9 +63,7 @@
       <div class="right-side">
         <section class="bio">
           <h1 class="bio-title">Michał Kubit</h1>
-          <p class="bio-occupation">
-            Front-end developer
-          </p>
+          <p class="bio-occupation">xxxxxx</p>
           <p class="bio-about">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet odio
             adipisci illo, earum atque quae, sequi magni consectetur sit
@@ -75,7 +72,7 @@
           </p>
         </section>
 
-        <section class="projects">
+        <!-- <section class="projects">
           <h2 class="projects-title">Projects</h2>
 
           <ol>
@@ -95,60 +92,169 @@
               </a>
             </li>
           </ol>
-        </section>
+        </section> -->
         <section class="jobs">
-          <h2 class="jobs-title">
-            Work experience
-          </h2>
+          <h2 class="jobs-title">Work experience</h2>
 
           <h3 class="jobs-occupation">
-            Front-end developer at
-            <span class="accent">Freelance</span>
+            <span class="accent">Shift supervisor at</span>
+            <a
+              class="employer-link"
+              target="blank"
+              href="https://styrobudbetoniarnie.pl/"
+              >Styrobud B.T.K. Radomscy</a
+            >
           </h3>
 
-          <p class="jobs-time">
-            September 2019 - up to now
-          </p>
+          <p class="jobs-time">July 2020 - up to now</p>
 
           <ul class="experience">
-            <li class="experience-item">
-              Lorem ipsum dolor sit amet...
-            </li>
-            <li class="experience-item">
-              Risus commodo viverra maecenas.
-            </li>
-            <li class="experience-item">
-              Lorem ipsum dolor sit amet...
-            </li>
+            <li class="experience-item">Organizing tasks for a work teams</li>
+            <li class="experience-item">Collecting orders forms clients</li>
+            <li class="experience-item">Checking product quality</li>
+            <li class="experience-item">Checking progress of orders in production</li>
+            <li class="experience-item">Answer phone calls, e-mails from clients</li>
           </ul>
 
           <h3 class="jobs-occupation">
-            Manager at <span class="accent">Brass plate company</span>
+            <span class="accent">Production Team leader at</span>
+            <a
+              class="employer-link"
+              target="blank"
+              href="http://www.keter.com/"
+              >Keter</a>
           </h3>
-          <p class="jobs-time">March 2015 - October 2018</p>
+
+          <p class="jobs-time">January 2019 - December 2019</p>
+
           <ul class="experience">
-            <li class="experience-item">Lorem ipsum dolor sit amet...</li>
-            <li class="experience-item">Risus commodo viverra maecenas.</li>
-            <li class="experience-item">Lorem ipsum dolor sit amet...</li>
+            <li class="experience-item">Organizing tasks for a work teams</li>
+            <li class="experience-item">Supervision employees of an external company</li>
+            <li class="experience-item">Checking product quality</li>
+            <li class="experience-item">Checking progress of orders in production</li>
+            <li class="experience-item">Reacting and solving current problems</li>
           </ul>
 
           <h3 class="jobs-occupation">
-            Manager at <span class="accent">Brass plate company</span>
+            <span class="accent">Location manager at</span>
+            <a
+              class="employer-link"
+              target="blank"
+              href="https://www.goodstay.nl/"
+              >GoodStay</a>
           </h3>
-          <p class="jobs-time">June 2014 - February 2015</p>
+
+          <p class="jobs-time">November 2017 - December 2018</p>
+
           <ul class="experience">
-            <li class="experience-item">Lorem ipsum dolor sit amet...</li>
-            <li class="experience-item">Risus commodo viverra maecenas.</li>
-            <li class="experience-item">Lorem ipsum dolor sit amet...</li>
+            <li class="experience-item">Providing support for the company's clients</li>
+            <li class="experience-item">Maintaining contact with cooperating companies</li>
+            <li class="experience-item">Servicing of subordinate locations</li>
+            <li class="experience-item">Cooperation with other sections of the company</li>
+            <li class="experience-item">Answer phone calls, e-mails from clients</li>
           </ul>
+
+          <h3 class="jobs-occupation">
+            <span class="accent">Employee Coordinator at </span>Sherpa Force</h3>
+
+          <p class="jobs-time">June 2017 - November 2017</p>
+
+          <ul class="experience">
+            <li class="experience-item">Setting a work schedule for employees</li>
+            <li class="experience-item">Arranging medical appointments</li>
+            <li class="experience-item">Providing support for the company's clients</li>
+            <li class="experience-item">Employee accommodation</li>
+            <li class="experience-item">Car allocation</li>
+          </ul>
+
+          <h3 class="jobs-occupation">
+            <span class="accent">Team leader at </span>Jardin Netherlands B.V.</h3>
+
+          <p class="jobs-time">October 2016 - May 2017</p>
+
+          <ul class="experience">
+            <li class="experience-item">Organizing work for a work team</li>
+            <li class="experience-item">Reporting status of work progress and product quality to management</li>
+            <li class="experience-item">Driving a forklift</li>
+          </ul>
+
+          <h3 class="jobs-occupation">
+            <span class="accent">Warehouse supervisor in car parts industry at </span>EMA
+          </h3>
+
+          <p class="jobs-time">November 2015 - September 2016</p>
+
+          <ul class="experience">
+            <li class="experience-item">Keeping track of inventory; reporting weekly to manager on inventory status</li>
+            <li class="experience-item">Preparing supply orders</li>
+            <li class="experience-item">Organizing work for a small work team</li>
+            <li class="experience-item">Service routes to partners in Slovakia</li>
+            <li class="experience-item">Providing support for the company's clients</li>
+          </ul>
+
+          <h3 class="jobs-occupation">
+            <span class="accent">Team leader at </span>
+            <a
+              class="employer-link"
+              target="blank"
+              href="http://www.empireoffice.com/"
+              >Empire Office</a>
+          </h3>
+
+          <p class="jobs-time">January 2014 - September 2015</p>
+
+          <ul class="experience">
+            <li class="experience-item">Working in Furniture Industry as a contractor</li>
+            <li class="experience-item">Collecting orders forms clients</li>
+            <li class="experience-item">Making arrangements for transportation of furniture</li>
+            <li class="experience-item">Distributing and planning out tasks for the work team</li>
+          </ul>
+
+          <h3 class="jobs-occupation">
+            <span class="accent">Shift Supervisor at </span>Gas station "Grosar"
+          </h3>
+
+          <p class="jobs-time">March 2011 - November 2013</p>
+
+          <ul class="experience">
+            <li class="experience-item">Organizing work at the gas station</li>
+            <li class="experience-item">Assisting customers</li>
+            <li class="experience-item">Processing customer payments</li>
+            <li class="experience-item">Preparing supply orders for the station</li>
+          </ul>
+
+          <h3 class="jobs-occupation">
+            <span class="accent">Sales Representative at </span>GMD (Insurance company)
+          </h3>
+
+          <p class="jobs-time">February 2008 - December 2010</p>
+
+          <ul class="experience">
+            <li class="experience-item">Maintaining a good relationship with new and old clients</li>
+            <li class="experience-item">Creating and organizing presentations for clients</li>
+            <li class="experience-item">Preparing all necessary documentation for clients</li>
+            <li class="experience-item">Lead seller of insurance</li>
+          </ul>
+
+          <h3 class="jobs-occupation">
+            <span class="accent">Production Worker at </span>Window factory "Romplast"
+          </h3>
+
+          <p class="jobs-time">June 2006 - January 2007</p>
+
+          <ul class="experience">
+            <li class="experience-item">Manual work with installation tools</li>
+            <li class="experience-item">Read technical specks of products</li>
+            <li class="experience-item">Taking care of the product quality</li>
+          </ul>
+
         </section>
         <section class="education">
           <h2 class="education-title">Education</h2>
 
           <h3 class="education-degree">
             Management,
-            <span class="accent"
-              > Iowa State University</span>
+            <span class="accent"> Iowa State University</span>
           </h3>
           <p class="education-time">September 2009 - June 2014</p>
 
