--- a/PL.html
+++ b/PL.html
@@ -22,10 +22,10 @@
         />
 
         <section class="contacts">
-          <h2 class="contacts-title">Contacts</h2>
+          <h2 class="contacts-title">Kontakt</h2>
           <ul class="contacts-list">
             <li class="contacts-item">
-              Phone:
+              Telefon:
               <a href="tel:+48500332672" class="contacts-link"
                 >+48 500 332 672</a
               >
@@ -61,7 +61,7 @@
         </section>
       </aside>
       <div class="right-side">
-        <a href="PL.html">PL</a>
+          <a href="index.html">EN</a>
         <section class="bio">
           <h1 class="bio-title">Michał Kubit</h1>
           <p class="bio-occupation">xxxxxx</p>
@@ -73,10 +73,10 @@
           </p>
         </section>
         <section class="jobs">
-          <h2 class="jobs-title">Work experience</h2>
+          <h2 class="jobs-title">Doświadczenie zawodowe</h2>
 
           <h3 class="jobs-occupation">
-            <span class="accent">Shift supervisor at</span>
+            <span class="accent">Brygadzista w</span>
             <a
               class="employer-link"
               target="blank"
@@ -85,7 +85,7 @@
             >
           </h3>
 
-          <p class="jobs-time">July 2020 - up to now</p>
+          <p class="jobs-time">Lipiec 2020 - trwa nadal</p>
 
           <ul class="experience">
             <li class="experience-item">Organizing tasks for a work teams</li>
@@ -96,7 +96,7 @@
           </ul>
 
           <h3 class="jobs-occupation">
-            <span class="accent">Production Team leader at</span>
+            <span class="accent">Lider produkcji w</span>
             <a
               class="employer-link"
               target="blank"
@@ -104,7 +104,7 @@
               >Keter</a>
           </h3>
 
-          <p class="jobs-time">January 2019 - December 2019</p>
+          <p class="jobs-time">Styczeń 2019 - Grudzień 2019</p>
 
           <ul class="experience">
             <li class="experience-item">Organizing tasks for a work teams</li>
@@ -115,7 +115,7 @@
           </ul>
 
           <h3 class="jobs-occupation">
-            <span class="accent">Location manager at</span>
+            <span class="accent">Menadżer lokacji w</span>
             <a
               class="employer-link"
               target="blank"
@@ -123,7 +123,7 @@
               >GoodStay</a>
           </h3>
 
-          <p class="jobs-time">November 2017 - December 2018</p>
+          <p class="jobs-time">Listopad 2017 - Grudzień 2018</p>
 
           <ul class="experience">
             <li class="experience-item">Providing support for the company's clients</li>
@@ -134,9 +134,9 @@
           </ul>
 
           <h3 class="jobs-occupation">
-            <span class="accent">Employee Coordinator at </span>Sherpa Force</h3>
+            <span class="accent">Koordynator pracowników w </span>Sherpa Force</h3>
 
-          <p class="jobs-time">June 2017 - November 2017</p>
+          <p class="jobs-time">Czerwiec 2017 - Listopad 2017</p>
 
           <ul class="experience">
             <li class="experience-item">Setting a work schedule for employees</li>
@@ -147,9 +147,9 @@
           </ul>
 
           <h3 class="jobs-occupation">
-            <span class="accent">Team leader at </span>Jardin Netherlands B.V.</h3>
+            <span class="accent">Brygadzista w </span>Jardin Netherlands B.V.</h3>
 
-          <p class="jobs-time">October 2016 - May 2017</p>
+          <p class="jobs-time">Październik 2016 - Maj 2017</p>
 
           <ul class="experience">
             <li class="experience-item">Organizing work for a work team</li>
@@ -158,10 +158,10 @@
           </ul>
 
           <h3 class="jobs-occupation">
-            <span class="accent">Warehouse supervisor in car parts industry at </span>EMA
+            <span class="accent">Kierownik magazynu z częściami samochodowymi w </span>EMA
           </h3>
 
-          <p class="jobs-time">November 2015 - September 2016</p>
+          <p class="jobs-time">Listopad 2015 - Wrzesień 2016</p>
 
           <ul class="experience">
             <li class="experience-item">Keeping track of inventory; reporting weekly to manager on inventory status</li>
@@ -172,7 +172,7 @@
           </ul>
 
           <h3 class="jobs-occupation">
-            <span class="accent">Team leader at </span>
+            <span class="accent">Brygadzista w</span>
             <a
               class="employer-link"
               target="blank"
@@ -180,7 +180,7 @@
               >Empire Office</a>
           </h3>
 
-          <p class="jobs-time">January 2014 - September 2015</p>
+          <p class="jobs-time">Styczeń 2014 - Wrzesień 2015</p>
 
           <ul class="experience">
             <li class="experience-item">Working in Furniture Industry as a contractor</li>
@@ -190,10 +190,10 @@
           </ul>
 
           <h3 class="jobs-occupation">
-            <span class="accent">Shift Supervisor at </span>Gas station "Grosar"
+            <span class="accent">Kierownik zmiany w </span>Stacja paliw "Grosar"
           </h3>
 
-          <p class="jobs-time">March 2011 - November 2013</p>
+          <p class="jobs-time">Marzec 2011 - Listopad 2013</p>
 
           <ul class="experience">
             <li class="experience-item">Organizing work at the gas station</li>
@@ -203,10 +203,10 @@
           </ul>
 
           <h3 class="jobs-occupation">
-            <span class="accent">Sales Representative at </span>GMD (Insurance company)
+            <span class="accent">Przedstawiciel handlowy w </span>GMD (Ubezpieczenia i inwestycje)
           </h3>
 
-          <p class="jobs-time">February 2008 - December 2010</p>
+          <p class="jobs-time">Luty 2008 - Grudzień 2010</p>
 
           <ul class="experience">
             <li class="experience-item">Maintaining a good relationship with new and old clients</li>
@@ -216,10 +216,10 @@
           </ul>
 
           <h3 class="jobs-occupation">
-            <span class="accent">Production Worker at </span>Window factory "Romplast"
+            <span class="accent">Pracownik produkcji w </span>Fabryka okien "Romplast"
           </h3>
 
-          <p class="jobs-time">June 2006 - January 2007</p>
+          <p class="jobs-time">Czerwiec 2006 - Styczeń 2007</p>
 
           <ul class="experience">
             <li class="experience-item">Manual work with installation tools</li>
@@ -229,23 +229,23 @@
 
         </section>
         <section class="education">
-          <h2 class="education-title">Education</h2>
+          <h2 class="education-title">Wykształcenie</h2>
 
           <h3 class="education-degree">
-            Full Stack Developer, <span class="accent">GoIT Courses</span>
+            Full Stack Developer, <span class="accent">Kursy GoIT</span>
           </h3>
-          <p class="education-time">From January 2022</p>
+          <p class="education-time">Od styczeń 2022</p>
 
           <h3 class="education-degree">
-            Economy,
+            Studium ekonomiczne,
             <span class="accent"> Centrum Kształcenia Ustawicznego</span>
           </h3>
-          <p class="education-time">September 2006 - January 2008</p>
+          <p class="education-time">Wrzesień 2006 - Styczeń 2008</p>
 
           <h3 class="education-degree">
-            Printing technician, <span class="accent">MZSP Miejsce Piastowe</span>
+            Technikum poligraficzne, <span class="accent">MZSP Miejsce Piastowe</span>
           </h3>
-          <p class="education-time">September 2002 - May 2006</p>
+          <p class="education-time">Wrzesień 2002 - Maj 2006</p>
         </section>
       </div>
     </div>
